# ShuttleVision

./: .gitignore  CLA.md  CONTRIBUTORS.md  LICENSE.md  README.md  main.py  pyproject.toml
docs/: ShuttleVision-HLD.md  ShuttleVision-LLD.md
src/shuttlevision/geometry/: __init__.py  calibration.py  camera.py  rays.py  types.py
src/shuttlevision/tracking/: __init__.py  detector.py  pipeline.py  tracker.py  types.py
src/shuttlevision/video/: __init__.py  backend.py  reader.py  types.py
